Simplify pagination SQL, MySqlClient, and update README
MillionScalePaginationSql:
- Add SortDirection.reversed() — encodes the flip logic in the enum
  instead of a ternary scattered across a private helper
- Extract cursorPageImpl() — unifies cursorPage and cursorPageBefore;
  the seek-predicate string (the most error-prone part) now lives in one place
- Extract aliasPrefix() — removes the identical null/blank guard copy-pasted
  across orderBy, orderByReversed, and selectList
- Delete orderByReversed() — replaced by orderBy(..., dir.reversed())
- Replace stream().reduce().orElseThrow() with String.join() in selectList
  and coveringIndexDdl (avoids O(n²) intermediate String allocations)
- Replace for-loop in validateOptionalColumns with stream().map().toList()
- Remove change-narrating Javadoc comment from cursorPageBefore

MySqlClient:
- Add queryPage(..., queryTimeoutSeconds) overload — serving-path callers
  can now bound slow scans; the no-timeout overload delegates to timeout=0
- Replace List.copyOf in PageResult with Collections.unmodifiableList —
  query() returns a fresh ArrayList exclusively owned by PageResult,
  so a defensive copy is a wasted allocation
- Remove narrating Javadoc from queryPage and PageResult

MySqlClientTest:
- Extract Mocks record + mockQuery() helper — removes six-line mock wiring
  repeated verbatim across four tests

README:
- Add mysql/ and pagination/ to Project Layout
- Add MySQL and pagination section to Developer Notes (MySqlClient,
  MySqlConnectionSettings, MillionScalePaginationSql with all three strategies)
- Add Pipeline Optimizations section (was in ToC but missing from body):
  table of OOM/Full GC/thread-blocking fixes applied across the serving path

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>